fix: 🐛 add gap for #footer-places ul

--- a/resources/skins.citizen.styles/Footer.less
+++ b/resources/skins.citizen.styles/Footer.less
@@ -57,11 +57,11 @@
 
 		ul {
 			padding: var( --space-xs );
+			gap: var( --space-sm ) var( --space-md );
 		}
 
 		a {
 			display: block;
-			margin: var( --space-xxs ) var( --space-md ) var( --space-xxs ) 0;
 		}
 	}
 
